# dreamKIT

./: .gitignore  .gitmodules  README.md
.github/workflow/: release-dk-ivi.yml  release-dk-manager
.github/workflows/: release-dk-appinstallservice.yml  release-dk-ivi.yml  release-dk-manager.yml  release-dk-service-can-provider.yml
app/xip_appinstallservice/: .gitignore  Dockerfile  README.md
app/xip_appinstallservice/scripts/: appCfg.json  main.py  updateVssMappingOVerlay.py
app/xip_dk_manager/: Dockerfile  README.md
app/xip_dk_manager/src/dk-manager/: CMakeLists.txt  build-dreamos-from-scratch-general-os.md  common_utils.h  dapr_utils.h  fileutils.cpp  fileutils.h  install-dk-manager.md  prototype_utils.cpp  prototype_utils.h
app/xip_dk_manager/src/dk-manager/vcuorchestrator/: main.js
app/xip_dk_vssgeneration/: Dockerfile  README.md  notes.txt  start.sh
app/xip_ivi/: Dockerfile  notes.txt
app/xip_ivi/src/: CMakeLists.txt  digitalauto.qml  installedvapps.qml  main.cpp  marketplace.qml
app/xip_ivi/src/aiassist/: aiassist.cpp
app/xip_ivi/src/controls/: CustomBtn2.qml
app/xip_ivi/src/digitalauto/: digitalauto.hpp
app/xip_ivi/src/installedservices/: unsafeparamcheck.cpp
app/xip_ivi/src/installedvapps/: installedvapps.hpp
app/xip_ivi/src/marketplace/: fetching.hpp  marketplace.cpp
app/xip_ivi/src/vss/: .vssclient_history  main  main_uint32.cpp  vssexample.txt
component/xip_vehicle_app_cpp_template/: CMakeLists.txt  Dockerfile  KuksaClient.cpp  KuksaClient.hpp  ReadMe.md  build_and_copy.sh  config.json  main.cpp
docs/: DreamKit-Architecture-Overview.md
dreamos-core/dk-ivi-lite/: Dockerfile  README.md  start.sh
dreamos-core/dk-ivi-lite/src/: .gitignore  CMakeLists.txt  Main.qml  README.md  aiassist.qml  dk_ivi.pro  installedservices.qml
dreamos-core/dk-ivi-lite/src/aiassist/: aiassist.hpp
dreamos-core/dk-ivi-lite/src/controls/: CustomBtn1.qml  IconBtn2.qml  ImgOverlay.qml  ModeControl.qml  RowOfBtn.qml  ToggleButton.qml  ValueStepper.qml  controls.cpp  controls.hpp  controls.qml
dreamos-core/dk-ivi-lite/src/digitalauto/: digitalauto.cpp  digitalauto.hpp  digitalauto.qml
dreamos-core/dk-ivi-lite/src/installedservices/: installedservices.cpp  installedservices.hpp  installedservices.qml  unsafeparamcheck.cpp  unsafeparamcheck.hpp
dreamos-core/dk-ivi-lite/src/installedvapps/: installedvapps.cpp  installedvapps.hpp  installedvapps.qml
dreamos-core/dk-ivi-lite/src/main/: config.cpp  config.hpp  dkmanager_subprocess.cpp  dkmanager_subprocess.hpp  main.cpp  main.qml  settings.qml
dreamos-core/dk-ivi-lite/src/marketplace/: fetching.cpp  marketplace.cpp  marketplace.hpp  marketplace.qml
dreamos-core/dk-ivi-lite/src/protocolbridge/: KuksaConfigurationDialog.qml  ProtocolBridgeDashboard.qml  ProtocolInterfaceCard.qml  ProtocolSourcePanel.qml  ProtocolTargetPanel.qml  README.md  TerminalConsolePanel.qml  VSSTranslationHub.qml  kuksaconnectionmanager.cpp  kuksaconnectionmanager.h  protocolbridge.cpp  protocolbridge.h  protocolbridge.qml  protocolbridge_simple.qml  protocolbridgemanager.cpp  protocolbridgemanager.h  terminalconsole.cpp  terminalconsole.h
dreamos-core/dk-ivi-lite/src/resource/customwidgets/: IconBtn1.qml  LeftMenuBtn.qml  TextOverlay.qml
dreamos-core/dk-ivi-lite/src/uss/: uss.cpp  uss.hpp  uss.qml
dreamos-core/dk-ivi-lite/src/vss/: main.cpp  main_bool.cpp  vssclient.py
dreamos-core/dk-manager/: .gitignore  Dockerfile  Dockerfile.Fast  README.md  copy-app-lddtree.sh  start.sh
dreamos-core/dk-manager/src/: common_utils.cpp  dapr_utils.cpp  diagram.drawio  dk-manager.pro  dkmanager.cpp  dkmanager.h  main.cpp  message_to_kit_handler.cpp  message_to_kit_handler.h  supportedvssapi_full.json  supportedvssapi_sample.json  vcuorchestrator.cpp  vcuorchestrator.hpp
dreamos-core/dk-manager/src/vcuorchestrator/: package-lock.json
dreamos-core/dk_appinstallservice/: Dockerfile  README.md
dreamos-core/dk_appinstallservice/scripts/: installapp.sh  main.py  serviceCfg.json  start.sh  updateDbcDefaultValue.py  updateappmgrfile.py
installation-scripts/jetson-orin/: dk_install.sh  dk_run.sh  dk_uninstall.sh  installation-guide.md
installation-scripts/jetson-orin/reference/: dk_install_services.sh
installation-scripts/jetson-orin/scripts/: create_dk_xiphost_service.sh  dk_enable_xhost.sh  dk_kuksa_client.sh  dk_xiphost.sh  setup_local_docker_registry.sh
installation-scripts/jetson-orin/swpackage/: swpackage.json
installation-scripts/jetson-orin/swpackage/xip/: xip.sh  xiphost.sh
installation-scripts/nxp-s32g/: dk_install.sh  installation-guide.md
installation-scripts/nxp-s32g/scripts/: daemon.json  dreamos-setup.service  dreamos_setup.sh
installation-scripts/nxp-s32g/tools/: canbusload  candump  cangen  cansend
scripts/dk_installation/: README.md  dk_enable_xhost.sh  dk_install.sh  dk_uninstall.sh
scripts/dk_installation/reference/: dk_install_can_hat_seeedstudio.sh  dk_install_services.sh
services/BYOD-coffeemachine-service/: README.md
services/BYOD-coffeemachine-service/src/: Dockerfile  cfg.json  main.py  press.py  start.sh
services/dreampack-HVAC-CAN-provider/: Dockerfile  Model3CAN.ini  README.md  dbc_default_values.json  start.sh
services/dreampack-HVAC-CAN-provider/can-provider/: dbcfeeder.py  main.py  start.sh
services/dreampack-HVAC-CAN-provider/can-provider/config/: dbc_feeder.ini
services/dreampack-HVAC-CAN-provider/can-provider/dbcfeederlib/: databrokerclientwrapper.py
services/dreampack-HVAC-CAN-provider/config/: dbc_feeder.ini
services/dreampack-HVAC-CAN-provider/dbcfeederlib/: canclient.py
services/dreampack-HVAC-CAN-provider/doc/: configuration.md
services/dreampack-HVAC-CAN-provider/mapping/: README.md
services/dreampack-HVAC-CAN-provider/mapping/vss_4.0_custom/: dbc_overlay.vspec  vss_dbc.json
services/dreampack-HVAC-CAN-provider/prepare-dbc-file/: ModelCAN.dbc
services/dreampack-HVAC-CAN-provider/prepare-dbc-file/mapping/: vss_dbc.json  (+2 more)
services/dreampack-HVAC-CAN-provider/runtime/: dbc_default_values.json  dbc_default_values_test.json  updateDbcDefaultValue.py  vss.json
(+13 files in other folders)
